# norwegian-cpi-nowcast

./: .env.example  .gitattributes  .gitignore  README.md  docker-compose.yml  pyproject.toml
.claude/: DEPLOYMENT_GUIDE.md  SYSTEM_STATUS.md
.github/workflows/: ci.yml  daily-light.yml  retrain.yml  scrape.yml
.streamlit/: config.toml  secrets.toml.example
api/: Dockerfile  main.py
db/: export_training_data.py  fetch_ssb_history.py  fix_products.py  schema.sql  seed_products.py
frontend/: app.py
indexer/: laspeyres.py  promo_filter.py  run_daily.py
model/: backfill_predictions.py  features.py  predict.py  train.py
scraper/: Dockerfile  config.py  db.py  kassal.py  main.py  meny.py  oda.py
tests/: test_promo_filter.py
