[project]
name = "norwegian-cpi-nowcast"
version = "0.1.0"
description = "Real-time COICOP-weighted grocery price index and SSB CPI nowcaster"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
    "curl-cffi>=0.7",
    "asyncpg>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "alembic>=1.13",
    "pandas>=2.2",
    "numpy>=1.26",
    "xgboost>=2.0",
    "statsmodels>=0.14",
    "scikit-learn>=1.4",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "python-dotenv>=1.0",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "tenacity>=8.3",
    "structlog>=24.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.4",
    "mypy>=1.10",
    "httpx[http2]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
